<resources>
    <string name="app_name">Leitner</string>
    <string name="action_box_6">Box #6</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_test">Add Test Data</string>
    <string name="action_delete_data">Delete All Data</string>
    <string name="action_add_card">Add New Card</string>
    <string name="action_edit_card">Edit Card</string>

    <!-- Strings used for fragments for navigation -->
    <string name="question_fragment_label">Question</string>
    <string name="answer_fragment_label">Answer</string>
    <string name="new_card_fragment_label">New Card</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="check">Check Answer</string>
    <string name="googleButton">Search Google</string>
    <string name="addCardButton">Add New Card</string>
    <string name="editQuestionHint">Enter Question Here</string>
    <string name="editAnswerHist">Enter Answer Here</string>
    <string name="okButton">OK</string>
    <string name="failedButton">Fail</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="total_string_format">Total: %d</string>
    <string name="viewable_string_format">Viewable: %d</string>
    <string name="id_string_format">ID: %d</string>
    <string name="boxid_string_format">Box ID: %d</string>
    <string name="box_1">1</string>
    <string name="box_2">2</string>
    <string name="box_3">3</string>
    <string name="box_4">4</string>
    <string name="box_5">5</string>

    <string name="notification_channel_id" translatable="false">leitner_channel</string>
    <string name="notification_channel_name" translatable="true">Leitner</string>
    <string name="notification_channel_description">Leitner reminder</string>
    <string name="notification_title">Leitner Notification</string>
    <string name="notification_text">Review your words now!</string>

    <string name="pref_title">Notification</string>
    <string name="notify_summary_on">Automatically send notification viewable cards</string>
    <string name="notify_summary_off">No notificaion will be sent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_update_text">Update</string>


</resources>