<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.leitner.MainActivity">
    <item
        android:id="@+id/action_addTestData"
        android:orderInCategory="100"
        android:title="@string/action_add_test"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleteAllData"
        android:orderInCategory="101"
        android:title="@string/action_delete_data"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_editCard"
        android:orderInCategory="102"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit_card"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_addNewCard"
        android:orderInCategory="103"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add_card"
        app:showAsAction="ifRoom" />

</menu>